--- a/SMS_Web_Layer/appsettings.json
+++ b/SMS_Web_Layer/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)DESKTOP-LL1KD55\\SQLEXPRESS;Database=School_Project;Trusted_Connection=True;"
+    "DefaultConnection":"Server=(localdb)\\MSSQLLocalDB;Database=School_Project;Trusted_Connection=True;"
   }
 }
