--- a/SMS_RestAPI/appsettings.json
+++ b/SMS_RestAPI/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SMS_Restful_APi;Trusted_Connection=True;"
+  }
 }
